Fix #124187: UI placeholder fails with None

With python API, `placeholder=None` throws an error and fails to
display the property in UI. Clear `PROP_NEVER_NULL` flag to resolve.

Pull Request: https://projects.blender.org/blender/blender/pulls/126497